--- a/ajax/config.ini.sample
+++ b/ajax/config.ini.sample
@@ -3,3 +3,7 @@
 ; It is recommended that the database be stored *outside* of the webroot
 ; Permissions on the directory need to be writable by your HTTP server
 db_path = "/home/USERNAME/database/markdown-scratchpad.sqlite"
+
+; Number of seconds required between entries before we archive the old version
+; Default: 3600
+; write_threshold = 3600
